--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "next": "15.5.2",
+    "@anthropic-ai/sdk": "^0.27.0",
+    "lucide-react": "^0.462.0",
+    "date-fns": "^4.1.0",
+    "@vercel/analytics": "^1.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
