--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2",
     "@anthropic-ai/sdk": "^0.27.0",
-    "lucide-react": "^0.462.0",
+    "@vercel/analytics": "^1.3.1",
     "date-fns": "^4.1.0",
-    "@vercel/analytics": "^1.3.1"
+    "dotenv": "^17.2.2",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^159.0.0",
+    "lucide-react": "^0.462.0",
+    "next": "15.5.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
